--- a/views/admin/pages/roles/permissions.pug
+++ b/views/admin/pages/roles/permissions.pug
@@ -114,7 +114,7 @@ block main
                                 input(type="checkbox")
                     tr
                         td(colspan = "4")
-                            b Tai khoan
+                            b Tài khoản
 
                     tr(data-name = "accounts_views")
                         td Xem 
@@ -123,17 +123,17 @@ block main
                                 input(type="checkbox")
                         
                     tr(data-name = "accounts_create")
-                        td Them moi 
+                        td Thêm mới 
                         each item in records
                             td(class = "text-center") 
                                 input(type="checkbox")
                     tr(data-name = "accounts_edit")
-                        td Chinh Sua
+                        td Chỉnh sửa
                         each item in records
                             td(class = "text-center") 
                                 input(type="checkbox")
                     tr(data-name = "accounts_delete")
-                        td Xoa
+                        td Xóa
                         each item in records
                             td(class = "text-center") 
                                 input(type="checkbox")
