--- a/views/admin/layouts/auth.pug
+++ b/views/admin/layouts/auth.pug
@@ -3,7 +3,7 @@ html
     head 
         title #{pageTitle}
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css")
-        link(rel="stylesheet", href="/admin/css/style.css")
+        link(rel="stylesheet", href="/admin/css/styte.css")
     body 
 
     
