--- a/views/admin/mixins/sort.pug
+++ b/views/admin/mixins/sort.pug
@@ -5,10 +5,10 @@ mixin sort()
             name = "sort"
             sort-select
         )
-            option(value = "position-desc") Vi tri giam dan 
-            option(value = "position-asc") Vi tri tang dan
-            option(value = "name-asc") Tieu de A - Z 
-            option(value = "name-desc") Tieu de Z - A
+            option(value = "position-desc") Vị trí giảm dần
+            option(value = "position-asc") Vị trí tăng dần
+            option(value = "name-asc") Tiêu đề A - Z 
+            option(value = "name-desc") Tiêu đề Z - A
         button(
             class = "btn btn-danger mt-2"
             sort-clear
