--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -3,18 +3,10 @@ include ../../mixins/table-tree.pug
 
 block main 
     if(role.permissions.includes("products-category_views"))
-        h1 Danh Muc Phim
+        h1 Danh mục phim
         .card.mb-3 
-            .card-header Danh Sach
+            .card-header Danh sách
                 .card-body 
-                    .row
-                        .col-8 
-                        .col-4 
-                            a(
-                                href= `/admin/products-category/create`
-                                class = "btn btn-outline-success mb-3"
-
-                            ) + Them Moi
                     table(
                         class = "table table-hover table-sm"
                         checkbox-multi
@@ -24,11 +16,11 @@ block main
                                 th 
                                     input(type="checkbox" name="checkall")
                                 th STT 
-                                th Hinh anh 
-                                th Ten
-                                th Vi TRi
-                                th Trang thai 
-                                th Hanh Dong
+                                th Hình ảnh
+                                th Tên
+                                th Vị trí
+                                th Trạng thái
+                                th Hành động
                         tbody 
                             +table-tree(records)
                                 
