--- a/views/admin/pages/roles/index.pug
+++ b/views/admin/pages/roles/index.pug
@@ -6,19 +6,11 @@ include ../../mixins/alert.pug
 block main
     if(role.permissions.includes("roles_views"))
         +success("5000")
-        h1(class = "mb-4") Nhom quyen
+        h1(class = "mb-4") Nhóm quyền
 
         .card.mb-3 
-            .card-header Danh sach
+            .card-header Danh sách
             .card-body 
-                .row 
-                    .col-8 
-                    .col-4 
-                        a(
-                            href= `/admin/roles/create`
-                            class = "btn btn-outline-success"
-
-                        ) + Thêm mới
 
                 table(
                     class = "table table-hover table-sm"
