--- a/views/admin/pages/product/deleted.pug
+++ b/views/admin/pages/product/deleted.pug
@@ -148,5 +148,11 @@ block main
       id = "form-stored-item"
       data-path = "/admin/products/stored"
     )
+    form(
+        action = ""
+        method = "POST"
+        id = "form-delete-item"
+        data-path = "/admin/products/permanently"
+    )
     script(src="/admin/js/product.js") 
 
