--- a/views/admin/paritials/headerr.pug
+++ b/views/admin/paritials/headerr.pug
@@ -99,7 +99,7 @@ body
                         li
                             a(href='/admin/accounts/create') Thêm tài khoản
                     li
-                        a(href='/admin/products/deleted') Tài khoản đã xóa
+                        a(href='/admin/accounts/deleted') Tài khoản đã xóa
         //- li
         //-   .iocn-link
         //-     a(href='#')
