--- a/views/admin/pages/product/index.pug
+++ b/views/admin/pages/product/index.pug
@@ -8,33 +8,9 @@ block main
       +success("5000")
       h1 Danh Sách Phim 
 
-      div(class = "container-control")
-          each item in filterStatus
-              button(
-                  button-status = item.status
-                  class = `${item.class}`
-              ) #{item.name}
           
-      form(id = "form-search")
-        div(class = "form-input")
-          input(
-            type="text"
-            placeholder = "Nhập từ khóa"
-            name = "keywork"
-            value = keywork
-          )
-          .button-form 
-            button(
-              class = "btn btn-primary"
-              type = "submit"
-            ) 
-              i(class = "fa-solid fa-magnifying-glass")
-        .cart-mt-3 
-          .card-body 
-              .row 
-                  .col-4 
-                      +sort()
 
+                 
       .container-lish-movie
 
         form(
@@ -59,8 +35,29 @@ block main
               type = "submit"
               class = "btn btn-primary"
             ) Áp Dụng
-      
-
+        div(class = "d-flex")
+          form(id = "form-search")
+            div(class = "form-input")
+              input(
+                type="text"
+                placeholder = "Nhập từ khóa"
+                name = "keywork"
+                value = keywork
+              )
+              .button-form 
+                button(
+                  class = "btn btn-primary"
+                  type = "submit"
+                ) 
+                  i(class = "fa-solid fa-magnifying-glass")
+          
+              +sort()
+          div(class = "container-control")
+            each item in filterStatus
+                button(
+                    button-status = item.status
+                    class = `${item.class}`
+                ) #{item.name}
         table(
           class = "table-movie"
           checkbox-multi
@@ -129,6 +126,10 @@ block main
                               data-id = item.id
                               button-delete
                             ) Xóa
+                          a(
+                              href = `/admin/products/newEpisode/${item.id}`
+                            )
+                              b Thêm tập mới 
       .page-btn
           if(pagination.currentPage > 1)
             .page
@@ -157,4 +158,6 @@ block main
         id = "form-delete-item"
         data-path = "/admin/products/delete"
       )
+
+      script(src= "/admin/js/product.js") 
 
