--- a/views/admin/pages/auth/login.pug
+++ b/views/admin/pages/auth/login.pug
@@ -17,7 +17,7 @@ block main
                 )
                     .login-box
                         .login-header
-                            header Login
+                            header Quản lý đăng nhập
                         .input-box
                             input(
                                 class = "input-field"
