--- a/views/client/pages/show/index.pug
+++ b/views/client/pages/show/index.pug
@@ -72,7 +72,7 @@ block main
           .clear
           .review
             strong Xem phim #{movie.name} Vietsub #{movie.infoMore}:
-            p #{movie.textContent}
+            p !{movie.textContent}
         .comment
           .form-comment
             .avata-user
