--- a/views/client/pages/watch/index.pug
+++ b/views/client/pages/watch/index.pug
@@ -75,21 +75,22 @@ block main
                 | Phim chiếu 1 tập vào
                 a(href='') Thứ #{movie.Showtimes}
             .comment
-
-              .form-comment
-                .avata-user
-                  img(src= movie.avata alt='')
-                .main-form
-                  form(action='/phim/comment/{{firmupdate._id}}?_method=PUT')
-                    input(type='text' placeholder='Tham Gia Bình Luận' name='comment')
-                    .btn-send
-                      button Gửi
-              .login-to-comment
-                .login
-                  .y
-                    a(href='/login')
-                      i.fa-solid.fa-right-to-bracket
-                      span Đăng nhập để bình luận
+              if(user)
+                .form-comment
+                  .avata-user
+                    img(src= movie.avata alt='')
+                  .main-form
+                    form(action='/phim/comment/{{firmupdate._id}}?_method=PUT')
+                      input(type='text' placeholder='Tham Gia Bình Luận' name='comment')
+                      .btn-send
+                        button Gửi
+              else
+                .login-to-comment
+                  .login
+                    .y
+                      a(href='/login')
+                        i.fa-solid.fa-right-to-bracket
+                        span Đăng nhập để bình luận
               .new-comment
                 .sort-comment
                   .total-comment
