--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -23,4 +23,22 @@ block main
                                 th Hành động
                         tbody 
                             +table-tree(records)
+    script. 
+        const buttonDelete = document.querySelectorAll("[button-delete-category]")
+            if(buttonDelete.length > 0){
+                const formDeleteItem = document.querySelector("#form-delete-item-category")
+                const path = formDeleteItem.getAttribute("data-path")
+                buttonDelete.forEach(button =>{
+                    button.addEventListener("click", () =>{
+                        const isConfirm = confirm("Bạn có muốn xóa danh mục này")
+                        if(isConfirm){
+                            const id = button.getAttribute("data-id")
+                            const action = `${path}/${id}?_method=DELETE`
+                            formDeleteItem.action = action
+                            formDeleteItem.submit()
+                        }
+                    })
+                })
+            }
+
                                 
